@@ -47,6 +47,8 @@ software-center (3.1.19) UNRELEASED; urgency=low
     softwarecenter/view/appdetailsview_gtk.py:
     - cleanup by unifing Review objects from rnrclient and  
       the detailsview
+  * softwarecenter/view/appdetailsview_gtk.py:
+    - show "none yet", "loading" in the review details
   
   [ Matthew McGowan ]
   * lp:~mmcg069/software-center/lobby-tweaks:
